--- a/index.html
+++ b/index.html
@@ -103,6 +103,6 @@
 			</div>
 		</div>
 		<div id="SynapseLink">
-			Looking for <a class="SubtitleLink" href="https://discord.gg/eJERhbGrPn">My Discord?</a>?
+			Looking for <a class="SubtitleLink" href="https://discord.gg/eJERhbGrPn">My Discord</a>?
 	</body>
 </html>
