--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 	<head>
 		<title>louka.io — Home</title>
-		<script src="https://kit.fontawesome.com/42364daefc.js" crossorigin="anonymous"></script>
+		<script src="https://kit.fontawesome.com/cf35f5e9e0.js" crossorigin="anonymous"></script>
 		<link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Raleway&display=swap" rel="stylesheet"> 
 		<style>
 
@@ -98,7 +98,8 @@
 		<div id="CenterElements">
 			<div id="CenterTitle">Synergy</div>
 			<div id="CenterLinks">
-				<a class="CenterLink" href="https://github.com/Synergy" title="GitHub" target="_blank"><i class="fas fa-code-branch"></i></a>
+				<a class="CenterLink" href="https://discord.bio/Synergy" title="Discord" targe+_blank"><i class="fab fa-discord"></i></a>
+				<a class="CenterLink" href="https://github.com/SynergyBest" title="GitHub" target="_blank"><i class="fas fa-code-branch"></i></a>
 				<p title="My email is not public" class="CenterLinkDisabled"><i class="far fa-envelope"></i></p>
 			</div>
 		</div>
