Changed my github Icon

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 			<div id="CenterTitle">Synergy</div>
 			<div id="CenterLinks">
 				<a class="CenterLink" href="https://discord.bio/Synergy" title="Discord" targe+_blank"><i class="fab fa-discord"></i></a>
-				<a class="CenterLink" href="https://github.com/SynergyBest" title="GitHub" target="_blank"><i class="fas fa-code-branch"></i></a>
+				<a class="CenterLink" href="https://github.com/SynergyBest" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
 				<p title="My email is not public" class="CenterLinkDisabled"><i class="far fa-envelope"></i></p>
 			</div>
 		</div>
