--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>louka.io — Home</title>
+		<title>SynergyBest - Home</title>
 		<script src="https://kit.fontawesome.com/cf35f5e9e0.js" crossorigin="anonymous"></script>
 		<link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Raleway&display=swap" rel="stylesheet"> 
 		<style>
@@ -98,12 +98,13 @@
 		<div id="CenterElements">
 			<div id="CenterTitle">Synergy</div>
 			<div id="CenterLinks">
-				<a class="CenterLink" href="https://discord.bio/Synergy" title="Discord" targe+_blank"><i class="fab fa-discord"></i></a>
 				<a class="CenterLink" href="https://github.com/SynergyBest" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
-				<p title="My email is not public" class="CenterLinkDisabled"><i class="far fa-envelope"></i></p>
+				<a class="CenterLink" href="https://discord.bio/Synergy" title="Discord" target="_blank"><i class="fab fa-discord"></i></a>
+				<a class="CenterLink" href="https://reddit.com/user/synergybest" title="Reddit" target="_blank><i class="fab fa-reddit"></i></a>
+				<a class="CenterLink" href="mailto:SynergyDev@protonmail.com"><i class="far fa-envelope"></i></a>
 			</div>
 		</div>
 		<div id="SynapseLink">
-			Looking for <a class="SubtitleLink" href="https://discord.gg/eJERhbGrPn">My Discord</a>?
+			Looking for <a class="SubtitleLink" href="https://discord.gg/eJERhbGrPn">My Discord server</a>?
 	</body>
 </html>
