--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 				<a class="CenterLink" href="https://github.com/SynergyBest" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
 				<a class="CenterLink" href="https://discord.bio/Synergy" title="Discord" target="_blank"><i class="fab fa-discord"></i></a>
 				<a class="CenterLink" href="https://reddit.com/user/synergybest" title="Reddit" target="_blank><i class="fab fa-reddit"></i></a>
-				<a class="CenterLink" href="mailto:SynergyDev@protonmail.com"><i class="far fa-envelope"></i></a>
+				<a class="CenterLink" href="mailto:SynergyDev@protonmail.com" title="Contact Me" target="_blank><i class="far fa-envelope"></i></a>
 			</div>
 		</div>
 		<div id="SynapseLink">
