--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 			<div id="CenterTitle">Synergy</div>
 			<div id="CenterLinks">
 				<a class="CenterLink" href="https://github.com/SynergyBest" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
-				<a class="CenterLink" href="https://discord.bio/Synergy" title="Discord" target="_blank"><i class="fab fa-discord"></i></a>
+				<a class="CenterLink" href="https://discord.bio/p/synergy" title="Discord" target="_blank"><i class="fab fa-discord"></i></a>
 				<a class="CenterLink" href="https://reddit.com/user/synergybest" title="Reddit" target="_blank><i class="fab fa-reddit"></i></a>
 				<a class="CenterLink" href="mailto:SynergyDev@protonmail.com"><i class="far fa-envelope"></i></a>
 			</div>
