--- a/index.html
+++ b/index.html
@@ -104,8 +104,10 @@
 				<a class="CenterLink" href="mailto:SynergyDev@protonmail.com"><i class="far fa-envelope"></i></a>
 			</div>
 		</div>
-		<div id="SynapseLink">
+		<div id="DiscordServer">
 			Looking for <a class="SubtitleLink" href="https://discord.gg/eJERhbGrPn">My Discord server</a>?
+		</div>
+		<a id="Credits" href="https://github.com/LoukaMB/loukamb.github.io/blob/master/index.html" target="_blank"><i class="fas fa-file-alt"></i></a>									
 	</body>
 </html>
 												
