--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				color: rgb(255, 255, 255);
 			}
 
-			#SynapseLink
+			#DiscordServer
 			{
 				position: absolute;
 				text-align: center;
