--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				top: 60%;
 			}
 
-			#Cross
+			#Credits
 			{
 				color: #93a1a1;
 				position: absolute;
@@ -110,4 +110,4 @@
 		<a id="Credits" href="https://github.com/LoukaMB/loukamb.github.io/blob/master/index.html" target="_blank"><i class="fas fa-file-alt"></i></a>									
 	</body>
 </html>
-												
+																		     
