--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 		<div id="DiscordServer">
 			Looking for <a class="SubtitleLink" href="https://discord.gg/eJERhbGrPn">My Discord server</a>?
 		</div>
-		<a id="Credits" href="https://github.com/LoukaMB/loukamb.github.io/blob/master/index.html" target="_blank"><i class="fas fa-file-alt"></i></a>									
+		<a id="Credits" href="https://github.com/LoukaMB/loukamb.github.io/" target="_blank"><i class="fas fa-file-alt"></i></a>									
 	</body>
 </html>
 																		     
