--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
+<meta content="SynergyDev" property="og:title">
+
+<meta content="He's the best!" property="og:description">
+
+<meta content='https://cdn.astral.cool/b73f8d71-3f24-4eaa-8636-381e29898456/1e4b75f894.png' property='og:image'>
+
 <html>
 	<head>
 		<title>SynergyBest - Home</title>
