--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <meta content="He's the best!" property="og:description">
 
-<meta content='https://cdn.astral.cool/b73f8d71-3f24-4eaa-8636-381e29898456/1e4b75f894.png' property='og:image'>
+<meta content='https://media0.giphy.com/media/26tPtg8M3i6DPSSt2/source.gif' property='og:image'>
 
 <html>
 	<head>
