--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <meta content='https://media0.giphy.com/media/26tPtg8M3i6DPSSt2/source.gif' property='og:image'>
 
+<meta name="theme-color" content="#01b78b">
 <html>
 	<head>
 		<title>SynergyBest - Home</title>
