--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 			a.CenterLink
 			{
-				color: #93a1a1;
+				color: #06b58b;
 				transition: all .4s
 			}
 
@@ -85,7 +85,7 @@
 
 			#Credits
 			{
-				color: #93a1a1;
+				color: #06b58b;
 				position: absolute;
 				text-align: center;
 				transform: translateX(-50%);
@@ -96,7 +96,7 @@
 			body
 			{
 				color: #93a1a1;
-				background-color: #002b36;
+				background-color: #05e4ae;
 				margin: 0;
 			}
 		</style>
