--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				top: 60%;
 			}
 
-			#Credits
+			a.Credits
 			{
 				color: #93a1a1;
 				position: absolute;
@@ -92,7 +92,11 @@
 				left: 50%;
 				top: 80%;
 			}
-
+			a.Credits:hover
+			{
+				color: rgb(255, 255, 255);
+				transform: scale(1.3);
+			}
 			body
 			{
 				color: #93a1a1;
