--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 				top: 60%;
 			}
 
-			a.Credits
+			a.Code
 			{
 				color: #93a1a1;
 				position: absolute;
@@ -93,7 +93,7 @@
 				top: 80%;
 				transition: all .4s;
 			}
-			a.Credits:hover
+			a.Code:hover
 			{
 				color: rgb(255, 255, 255);
 				transform: scale(1.3);
@@ -110,9 +110,9 @@
 		<div id="CenterElements">
 			<div id="CenterTitle">Synergy</div>
 			<div id="CenterLinks">
-				<a class="CenterLink" href="https://github.com/SynergyBest" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
+				<a class="CenterLink" href="https://github.com/SynergyBest" title="GitHub" target="_blank"><i class="fab fa-github-square"></i></a>
 				<a class="CenterLink" href="https://discord.com/users/543599597210304542" title="Discord" target="_blank"><i class="fab fa-discord"></i></a>
-				<a class="CenterLink" href="https://reddit.com/user/synergybest" title="Reddit" target="_blank"><i class="fab fa-reddit"></i></a>
+				<a class="CenterLink" href="https://reddit.com/user/synergybest" title="Reddit" target="_blank"><i class="fab fa-reddit-square"></i></a>
 				<a class="CenterLink" href="https://paypal.me/synergydev" title="paypal" target="_blank"><i class="fab fa-paypal"></i></a>
 				<a class="CenterLink" href="mailto:SynergyDev@protonmail.com"><i class="far fa-envelope"></i></a>
 			</div>
@@ -120,7 +120,7 @@
 		<div id="DiscordServer">
 			Looking for <a class="SubtitleLink" href="https://discord.gg/eJERhbGrPn">My Discord server</a>?
 		</div>
-		<a class="Credits" href="https://github.com/LoukaMB/loukamb.github.io/" target="_blank"><i class="fas fa-file-alt"></i></a>									
+		<a class="Code" href="https://github.com/SynergyBest/SynergyDev.tk/" target="_blank"><i class="fas fa-code"></i></a>									
 	</body>
 </html>
 																		     
