--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 			</div>
 		</div>
 		<div id="DiscordServer">
-			Looking for <a class="SubtitleLink" href="https://discord.gg/eJERhbGrPn">My Discord server</a>?
+			Looking for <a class="SubtitleLink" href="https://discord.gg/dCcBFwQStT">My Discord server</a>?
 		</div>
 		<a class="Code" href="https://github.com/SynergyBest/SynergyDev.tk/" target="_blank"><i class="fas fa-code"></i></a>									
 	</body>
