--- a/index.html
+++ b/index.html
@@ -6,16 +6,106 @@
 <html>
    <head>
       <title>SynergyBest - Home</title>
-      <script src="https://kit.fontawesome.com/cf35f5e9e0.js" crossorigin="anonymous"></script> 
+      <script src="https://kit.fontawesome.com/cf35f5e9e0.js" crossorigin="anonymous"></script>
       <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Raleway&display=swap" rel="stylesheet">
-      <style>#CenterElements{position:absolute;transform:translate(-50%,-50%);left:50%;top:50%}#CenterTitle{font-size:48px;font-family:'Permanent Marker',cursive}#CenterLinks{display:flex;flex-direction:row;justify-content:space-around;align-items:center;font-size:24px}#CenterText{font-family:'Raleway',sans-serif}a{text-decoration:none}p.CenterLinkDisabled{color:#073642}a.CenterLink{color:#93a1a1;transition:all .4s}a.CenterLink:hover{color:rgb(255,255,255);transform:scale(1.3)}a.SubtitleLink{transition:all .2s;color:rgb(200,200,200)}a.SubtitleLink:hover{color:rgb(255,255,255)}#DiscordServer{position:absolute;text-align:center;font-family:'Raleway',sans-serif;transform:translateX(-50%);left:50%;top:60%}a.Code{color:#93a1a1;position:absolute;text-align:center;transform:translateX(-50%);left:50%;top:80%;transition:all .4s}a.Code:hover{color:rgb(255,255,255);transform:scale(1.3)}body{color:#93a1a1;background-color:#002b36;margin:0}</style>
+      <style>
+         #CenterElements
+         {
+         position: absolute;
+         transform: translate(-50%, -50%);
+         left: 50%;
+         top: 50%;
+         }
+         #CenterTitle
+         {
+         font-size: 48px;
+         font-family: 'Permanent Marker', cursive;
+         }
+         #CenterLinks
+         {
+         display: flex;
+         flex-direction: row;
+         justify-content: space-around;
+         align-items: center;
+         font-size: 24px;
+         }
+         #CenterText
+         {
+         font-family: 'Raleway', sans-serif;
+         }
+         a
+         {
+         text-decoration: none;
+         }
+         p.CenterLinkDisabled
+         {
+         color: #073642;
+         }
+         a.CenterLink
+         {
+         color: #93a1a1;
+         transition: all .4s
+         }
+         a.CenterLink:hover
+         {
+         color: rgb(255, 255, 255);
+         transform: scale(1.3);
+         }
+         a.SubtitleLink
+         {
+         transition: all .2s;
+         color: rgb(200, 200, 200);
+         }
+         a.SubtitleLink:hover
+         {
+         color: rgb(255, 255, 255);
+         }
+         #DiscordServer
+         {
+         position: absolute;
+         text-align: center;
+         font-family: 'Raleway', sans-serif;
+         transform: translateX(-50%);
+         left: 50%;
+         top: 60%;
+         }
+         a.Code
+         {
+         color: #93a1a1;
+         position: absolute;
+         text-align: center;
+         transform: translateX(-50%);
+         left: 50%;
+         top: 80%;
+         transition: all .4s;
+         }
+         a.Code:hover
+         {
+         color: rgb(255, 255, 255);
+         transform: scale(1.3);
+         }
+         body
+         {
+         color: #93a1a1;
+         background-color: #002b36;
+         margin: 0;
+         }
+      </style>
    </head>
    <body>
       <div id="CenterElements">
          <div id="CenterTitle">Synergy</div>
-         <div id="CenterLinks"> <a class="CenterLink" href="https://github.com/SynergyBest" title="GitHub" target="_blank"><i class="fab fa-github"></i></a> <a class="CenterLink" href="https://discord.com/users/543599597210304542" title="Discord" target="_blank"><i class="fab fa-discord"></i></a> <a class="CenterLink" href="https://reddit.com/user/synergybest" title="Reddit" target="_blank"><i class="fab fa-reddit"></i></a> <a class="CenterLink" href="https://paypal.me/synergydev" title="paypal" target="_blank"><i class="fab fa-paypal"></i></a> <a class="CenterLink" href="mailto:SynergyDev@protonmail.com"><i class="far fa-envelope"></i></a></div>
+         <div id="CenterLinks">
+            <a class="CenterLink" href="https://github.com/SynergyBest" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
+            <a class="CenterLink" href="https://discord.com/users/543599597210304542" title="Discord" target="_blank"><i class="fab fa-discord"></i></a>
+            <a class="CenterLink" href="https://reddit.com/user/synergybest" title="Reddit" target="_blank"><i class="fab fa-reddit"></i></a>
+            <a class="CenterLink" href="https://paypal.me/synergydev" title="paypal" target="_blank"><i class="fab fa-paypal"></i></a>
+            <a class="CenterLink" href="mailto:SynergyDev@protonmail.com"><i class="far fa-envelope"></i></a>
+         </div>
       </div>
-      <div id="DiscordServer"> Looking for <a class="SubtitleLink" href="https://discord.gg/dCcBFwQStT">My Discord server</a>?</div>
-      <a class="Code" href="https://github.com/SynergyBest/SynergyDev.tk/" target="_blank"><i class="fas fa-code"></i></a>
+      <div id="DiscordServer">
+         Looking for <a class="SubtitleLink" href="https://discord.gg/dCcBFwQStT">My Discord server</a>?
+      </div>
+      <a class="Code" href="https://github.com/SynergyBest/SynergyDev.tk/" target="_blank"><i class="fas fa-code"></i></a>									
    </body>
 </html>
