Edited embed icon
Mostly just did this to test my GitHub webhook

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <meta content="SynergyDev" property="og:title">
 <meta content="He's the best!" property="og:description">
-<meta content='https://media0.giphy.com/media/26tPtg8M3i6DPSSt2/source.gif' property='og:image'>
+<meta content='https://cdn.discordapp.com/avatars/543599597210304542/a_3a07815b86d2eda0fdae26c13a638099.gif' property='og:image'>
 <meta name="theme-color" content="#01b78b">
 <html>
    <head>
