--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <title>SynergyBest - Home</title>
       <script src="https://kit.fontawesome.com/cf35f5e9e0.js" crossorigin="anonymous"></script>
       <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Raleway&display=swap" rel="stylesheet">
+      <link rel="stylesheet" href="css/styles.css" type="text/css">
    </head>
    <body>
       <div id="CenterElements">
