--- a/index.html
+++ b/index.html
@@ -1,29 +1,30 @@
 <!DOCTYPE html>
-<meta content="SynergyDev" property="og:title">
-<meta content="He's the best!" property="og:description">
-<meta content='https://cdn.discordapp.com/avatars/543599597210304542/a_3a07815b86d2eda0fdae26c13a638099.gif' property='og:image'>
-<meta name="theme-color" content="#01b78b">
 <html>
    <head>
-      <title>SynergyBest - Home</title>
-      <script src="https://kit.fontawesome.com/cf35f5e9e0.js" crossorigin="anonymous"></script>
+      <meta content="SynergyDev" property="og:title">
+      <meta content="He's the best!" property="og:description">
+      <meta content='https://cdn.discordapp.com/avatars/543599597210304542/a_3a07815b86d2eda0fdae26c13a638099.gif' property='og:image'>
+      <meta content="#01b78b" name="theme-color">
+      <meta lang="en">
       <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Raleway&display=swap" rel="stylesheet">
       <link rel="stylesheet" href="css/styles.css" type="text/css">
+      <script src="https://kit.fontawesome.com/cf35f5e9e0.js" crossorigin="anonymous"></script>
+      <title>SynergyDev | Home</title>
    </head>
    <body>
       <div id="CenterElements">
          <div id="CenterTitle">Synergy</div>
-         <div id="CenterLinks">
-            <a class="CenterLink" href="https://github.com/SynergyBest" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
-            <a class="CenterLink" href="https://discord.com/users/543599597210304542" title="Discord" target="_blank"><i class="fab fa-discord"></i></a>
-            <a class="CenterLink" href="https://reddit.com/user/synergybest" title="Reddit" target="_blank"><i class="fab fa-reddit"></i></a>
-            <a class="CenterLink" href="https://paypal.me/synergydev" title="paypal" target="_blank"><i class="fab fa-paypal"></i></a>
-            <a class="CenterLink" href="mailto:SynergyDev@protonmail.com"><i class="far fa-envelope"></i></a>
+            <div id="CenterLinks">
+               <a class="CenterLink" href="https://github.com/SynergyBest" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
+               <a class="CenterLink" href="https://discord.com/users/543599597210304542" title="Discord" target="_blank"><i class="fab fa-discord"></i></a>
+               <a class="CenterLink" href="https://reddit.com/user/synergybest" title="Reddit" target="_blank"><i class="fab fa-reddit"></i></a>
+               <a class="CenterLink" href="https://paypal.me/synergydev" title="paypal" target="_blank"><i class="fab fa-paypal"></i></a>
+               <a class="CenterLink" href="mailto:SynergyDev@protonmail.com"><i class="far fa-envelope"></i></a>
+            </div>
          </div>
-      </div>
-      <div id="DiscordServer">
-         Looking for <a class="SubtitleLink" href="https://discord.gg/dCcBFwQStT">My Discord server</a>?
-      </div>
-      <a class="Code" href="https://github.com/SynergyBest/SynergyDev.tk/" target="_blank"><i class="fas fa-code"></i></a>									
-   </body>
-</html>
+            <div id="DiscordServer">
+            Looking for <a class="SubtitleLink" href="https://discord.gg/dCcBFwQStT">My Discord server</a>?
+            </div>
+         <a class="Code" href="https://github.com/SynergyBest/SynergyDev.tk/" target="_blank"><i class="fas fa-code"></i></a>									
+      </body>
+   </html>
