--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
    <head>
       <meta content="SynergyDev" property="og:title">
       <meta content="He's the best!" property="og:description">
-      <meta content='https://cdn.discordapp.com/avatars/543599597210304542/a_3a07815b86d2eda0fdae26c13a638099.gif' property='og:image'>
+      <meta content="/images/embedimage.gif" property="og:image">
       <meta content="#01b78b" name="theme-color">
       <meta lang="en">
       <link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Raleway&display=swap" rel="stylesheet">
