--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                <a class="CenterLink" href="https://github.com/SynergyBest" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
                <a class="CenterLink" href="https://discord.com/users/543599597210304542" title="Discord" target="_blank"><i class="fab fa-discord"></i></a>
                <a class="CenterLink" href="https://reddit.com/user/synergybest" title="Reddit" target="_blank"><i class="fab fa-reddit"></i></a>
-               <a class="CenterLink" href="https://paypal.me/synergydev" title="paypal" target="_blank"><i class="fab fa-paypal"></i></a>
+               <p title="My paypal is broken for now" class="CenterLinkDisabled"><i class="fab fa-paypal"></i></p
                <a class="CenterLink" href="mailto:SynergyDev@protonmail.com"><i class="far fa-envelope"></i></a>
             </div>
          </div>
