--- a/index.html
+++ b/index.html
@@ -23,8 +23,10 @@ terms of the MIT license.
       <div id="CenterElements">
          <div id="CenterTitle">Synergy</div>
             <div id="CenterLinks">
+               <center>
                <a class="CenterLink" href="https://github.com/SynergyBest" title="GitHub" target="_blank"><i class="fab fa-github"></i></a>
                <a class="CenterLink" href="https://discord.com/users/543599597210304542" title="Discord" target="_blank"><i class="fab fa-discord"></i></a>
+             </center>
             </div>
          </div>
             <div id="DiscordServer">
