--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@ terms of the MIT license.
             <div id="DiscordServer">
             Looking for <a class="SubtitleLink" href="https://discord.gg/dCcBFwQStT">My Discord server</a>?
             </div>
-         <a class="Code" href="https://github.com/SynergyBest/SynergyDev.tk/" target="_blank"><i class="fas fa-code"></i></a>									
+         <a class="Code" href="https://github.com/SynergyBest/SynergyDev.tk/" target="_blank"><i class="fas fa-code"></i></a>						
+        <script>
+         window.location.replace("https://synergybest.dev");
+        </script>
       </body>
    </html>
