--- a/index.html
+++ b/index.html
@@ -33,5 +33,8 @@ terms of the MIT license.
             Looking for <a class="SubtitleLink" href="https://discord.gg/dCcBFwQStT">My Discord server</a>?
             </div>
          <a class="Code" href="https://github.com/SynergyBest/SynergyDev.tk/" target="_blank"><i class="fas fa-code"></i></a>
+         <script>
+          window.location.replace("https://synergybest.dev");
+    </script>
       </body>
    </html>
