--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ terms of the MIT license.
  You should have received a copy of the MIT license with
  this file, if not please visit: https://opensource.org/licenses/mit
  -->
-<!--Credits to Synergy @ SynergyDev.tk-->
+<!--Credits to Synergy @ synergybest.dev-->
 <!DOCTYPE html>
 <html>
    <head>
